[package]
name = "postgresql-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres", "uuid", "chrono" ] }
dotenv = "0.15.0"
chrono = { version = "0.4.23", features = ["serde"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
rust-argon2 = "1.0"
lazy_static = "1.4.0"